// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing folding ranges of configuration.vhd 1`] = `
[
  {
    "endLine": 3,
    "startLine": 0,
  },
]
`;

exports[`Testing folding ranges of test_alias.vhd 1`] = `
[
  {
    "endLine": 10,
    "startLine": 4,
  },
  {
    "endLine": 2,
    "kind": "imports",
    "startLine": 0,
  },
  {
    "endLine": 7,
    "startLine": 5,
  },
]
`;

exports[`Testing folding ranges of test_block.vhd 1`] = `
[
  {
    "endLine": 2,
    "kind": "imports",
    "startLine": 0,
  },
  {
    "endLine": 8,
    "startLine": 7,
  },
  {
    "endLine": 14,
    "startLine": 9,
  },
  {
    "endLine": 12,
    "startLine": 11,
  },
  {
    "endLine": 0,
    "kind": "imports",
    "startLine": Infinity,
  },
]
`;

exports[`Testing folding ranges of test_case_generate.vhd 1`] = `
[
  {
    "endLine": 2,
    "kind": "imports",
    "startLine": 0,
  },
  {
    "endLine": 8,
    "startLine": 7,
  },
  {
    "endLine": 17,
    "startLine": 9,
  },
  {
    "endLine": 16,
    "startLine": 11,
  },
  {
    "endLine": 13,
    "startLine": 12,
  },
  {
    "endLine": 0,
    "kind": "imports",
    "startLine": Infinity,
  },
  {
    "endLine": 15,
    "startLine": 14,
  },
  {
    "endLine": 0,
    "kind": "imports",
    "startLine": Infinity,
  },
]
`;

exports[`Testing folding ranges of test_entity.vhd 1`] = `
[
  {
    "endLine": 3,
    "startLine": 1,
  },
]
`;

exports[`Testing folding ranges of test_for_generate.vhd 1`] = `
[
  {
    "endLine": 2,
    "kind": "imports",
    "startLine": 0,
  },
  {
    "endLine": 8,
    "startLine": 7,
  },
  {
    "endLine": 14,
    "startLine": 9,
  },
  {
    "endLine": 12,
    "startLine": 11,
  },
  {
    "endLine": 0,
    "kind": "imports",
    "startLine": Infinity,
  },
]
`;

exports[`Testing folding ranges of test_if_else_generate.vhd 1`] = `
[
  {
    "endLine": 2,
    "kind": "imports",
    "startLine": 0,
  },
  {
    "endLine": 8,
    "startLine": 7,
  },
  {
    "endLine": 16,
    "startLine": 9,
  },
  {
    "endLine": 12,
    "startLine": 11,
  },
  {
    "endLine": 0,
    "kind": "imports",
    "startLine": Infinity,
  },
  {
    "endLine": 14,
    "startLine": 13,
  },
  {
    "endLine": 0,
    "kind": "imports",
    "startLine": Infinity,
  },
]
`;

exports[`Testing folding ranges of test_if_elsif_generate.vhd 1`] = `
[
  {
    "endLine": 2,
    "kind": "imports",
    "startLine": 0,
  },
  {
    "endLine": 8,
    "startLine": 7,
  },
  {
    "endLine": 15,
    "startLine": 9,
  },
  {
    "endLine": 12,
    "startLine": 11,
  },
  {
    "endLine": 0,
    "kind": "imports",
    "startLine": Infinity,
  },
  {
    "endLine": 14,
    "startLine": 13,
  },
  {
    "endLine": 0,
    "kind": "imports",
    "startLine": Infinity,
  },
]
`;

exports[`Testing folding ranges of test_inst.vhd 1`] = `
[
  {
    "endLine": 2,
    "kind": "imports",
    "startLine": 0,
  },
  {
    "endLine": 8,
    "startLine": 7,
  },
  {
    "endLine": 16,
    "startLine": 9,
  },
  {
    "endLine": 14,
    "startLine": 11,
  },
  {
    "endLine": 14,
    "startLine": 12,
  },
]
`;

exports[`Testing folding ranges of test_process.vhd 1`] = `
[
  {
    "endLine": 2,
    "kind": "imports",
    "startLine": 0,
  },
  {
    "endLine": 7,
    "startLine": 5,
  },
  {
    "endLine": 11,
    "startLine": 10,
  },
  {
    "endLine": 20,
    "startLine": 12,
  },
  {
    "endLine": 14,
    "startLine": 14,
  },
  {
    "endLine": 18,
    "startLine": 15,
  },
]
`;

exports[`Testing folding ranges of test_protected.vhd 1`] = `
[
  {
    "endLine": 9,
    "startLine": 4,
  },
  {
    "endLine": 2,
    "kind": "imports",
    "startLine": 0,
  },
  {
    "endLine": 8,
    "startLine": 5,
  },
  {
    "endLine": 9,
    "startLine": 5,
  },
  {
    "endLine": 7,
    "startLine": 7,
  },
  {
    "endLine": 54,
    "startLine": 12,
  },
  {
    "endLine": 16,
    "startLine": 15,
  },
  {
    "endLine": 21,
    "startLine": 17,
  },
  {
    "endLine": 15,
    "startLine": 15,
  },
  {
    "endLine": 19,
    "startLine": 18,
  },
  {
    "endLine": 53,
    "startLine": 25,
  },
  {
    "endLine": 54,
    "startLine": 25,
  },
  {
    "endLine": 29,
    "startLine": 29,
  },
  {
    "endLine": 31,
    "startLine": 30,
  },
  {
    "endLine": 34,
    "startLine": 34,
  },
  {
    "endLine": 44,
    "startLine": 35,
  },
  {
    "endLine": 34,
    "startLine": 34,
  },
  {
    "endLine": 43,
    "startLine": 36,
  },
  {
    "endLine": 42,
    "startLine": 37,
  },
  {
    "endLine": 39,
    "startLine": 38,
  },
  {
    "endLine": 41,
    "startLine": 40,
  },
  {
    "endLine": 48,
    "startLine": 47,
  },
  {
    "endLine": 51,
    "startLine": 49,
  },
]
`;

exports[`Testing folding ranges of test_record.vhd 1`] = `
[
  {
    "endLine": 7,
    "startLine": 4,
  },
  {
    "endLine": 2,
    "kind": "imports",
    "startLine": 0,
  },
  {
    "endLine": 7,
    "startLine": 5,
  },
]
`;

exports[`Testing folding ranges of test_stateMachine.vhd 1`] = `
[
  {
    "endLine": 2,
    "kind": "imports",
    "startLine": 0,
  },
  {
    "endLine": 9,
    "startLine": 7,
  },
  {
    "endLine": 25,
    "startLine": 10,
  },
  {
    "endLine": 12,
    "startLine": 12,
  },
  {
    "endLine": 23,
    "startLine": 13,
  },
  {
    "endLine": 23,
    "startLine": 14,
  },
  {
    "endLine": 16,
    "startLine": 15,
  },
  {
    "endLine": 18,
    "startLine": 17,
  },
  {
    "endLine": 20,
    "startLine": 19,
  },
  {
    "endLine": 22,
    "startLine": 21,
  },
]
`;

exports[`Testing folding ranges of test_stateMachineCase.vhd 1`] = `
[
  {
    "endLine": 2,
    "kind": "imports",
    "startLine": 0,
  },
  {
    "endLine": 10,
    "startLine": 7,
  },
  {
    "endLine": 31,
    "startLine": 11,
  },
  {
    "endLine": 13,
    "startLine": 13,
  },
  {
    "endLine": 29,
    "startLine": 14,
  },
  {
    "endLine": 29,
    "startLine": 15,
  },
  {
    "endLine": 22,
    "startLine": 16,
  },
  {
    "endLine": 22,
    "startLine": 17,
  },
  {
    "endLine": 19,
    "startLine": 18,
  },
  {
    "endLine": 21,
    "startLine": 20,
  },
  {
    "endLine": 24,
    "startLine": 23,
  },
  {
    "endLine": 26,
    "startLine": 25,
  },
  {
    "endLine": 28,
    "startLine": 27,
  },
]
`;

exports[`Testing folding ranges of test_stateMachineElse.vhd 1`] = `
[
  {
    "endLine": 2,
    "kind": "imports",
    "startLine": 0,
  },
  {
    "endLine": 9,
    "startLine": 7,
  },
  {
    "endLine": 28,
    "startLine": 10,
  },
  {
    "endLine": 12,
    "startLine": 12,
  },
  {
    "endLine": 26,
    "startLine": 13,
  },
  {
    "endLine": 14,
    "startLine": 14,
  },
  {
    "endLine": 25,
    "startLine": 15,
  },
  {
    "endLine": 25,
    "startLine": 16,
  },
  {
    "endLine": 18,
    "startLine": 17,
  },
  {
    "endLine": 20,
    "startLine": 19,
  },
  {
    "endLine": 22,
    "startLine": 21,
  },
  {
    "endLine": 24,
    "startLine": 23,
  },
]
`;

exports[`Testing folding ranges of test_stateMachineElsif.vhd 1`] = `
[
  {
    "endLine": 2,
    "kind": "imports",
    "startLine": 0,
  },
  {
    "endLine": 9,
    "startLine": 7,
  },
  {
    "endLine": 28,
    "startLine": 10,
  },
  {
    "endLine": 12,
    "startLine": 12,
  },
  {
    "endLine": 26,
    "startLine": 13,
  },
  {
    "endLine": 14,
    "startLine": 14,
  },
  {
    "endLine": 25,
    "startLine": 15,
  },
  {
    "endLine": 25,
    "startLine": 16,
  },
  {
    "endLine": 18,
    "startLine": 17,
  },
  {
    "endLine": 20,
    "startLine": 19,
  },
  {
    "endLine": 22,
    "startLine": 21,
  },
  {
    "endLine": 24,
    "startLine": 23,
  },
]
`;

exports[`Testing folding ranges of test_stateMachineFor.vhd 1`] = `
[
  {
    "endLine": 2,
    "kind": "imports",
    "startLine": 0,
  },
  {
    "endLine": 9,
    "startLine": 7,
  },
  {
    "endLine": 27,
    "startLine": 10,
  },
  {
    "endLine": 12,
    "startLine": 12,
  },
  {
    "endLine": 25,
    "startLine": 13,
  },
  {
    "endLine": 24,
    "startLine": 14,
  },
  {
    "endLine": 24,
    "startLine": 15,
  },
  {
    "endLine": 17,
    "startLine": 16,
  },
  {
    "endLine": 19,
    "startLine": 18,
  },
  {
    "endLine": 21,
    "startLine": 20,
  },
  {
    "endLine": 23,
    "startLine": 22,
  },
]
`;

exports[`Testing folding ranges of test_stateMachineIf.vhd 1`] = `
[
  {
    "endLine": 2,
    "kind": "imports",
    "startLine": 0,
  },
  {
    "endLine": 9,
    "startLine": 7,
  },
  {
    "endLine": 27,
    "startLine": 10,
  },
  {
    "endLine": 12,
    "startLine": 12,
  },
  {
    "endLine": 25,
    "startLine": 13,
  },
  {
    "endLine": 24,
    "startLine": 14,
  },
  {
    "endLine": 24,
    "startLine": 15,
  },
  {
    "endLine": 17,
    "startLine": 16,
  },
  {
    "endLine": 19,
    "startLine": 18,
  },
  {
    "endLine": 21,
    "startLine": 20,
  },
  {
    "endLine": 23,
    "startLine": 22,
  },
]
`;

exports[`Testing folding ranges of test_subprogram.vhd 1`] = `
[
  {
    "endLine": 5,
    "startLine": 4,
  },
  {
    "endLine": 2,
    "kind": "imports",
    "startLine": 0,
  },
  {
    "endLine": 12,
    "startLine": 8,
  },
  {
    "endLine": 9,
    "startLine": 9,
  },
  {
    "endLine": 11,
    "startLine": 10,
  },
]
`;
